--- a/etl/etl.conf
+++ b/etl/etl.conf
@@ -1,3 +1,14 @@
+
+temp_dir=/tmp/ncbi/
+ftp_proxy=http://firewall.mpi-bremen.de:80
+
+#PostgreSQL target server connection options
+pghost=antares
+pgport=5433
+pguser=mschneid
+pgdb=megdb_r8
+pgpw=
+
 # SILVA MySQL server connection options
 mysqlhost=silva-dev
 mysqlport=3306
@@ -8,14 +19,6 @@ mysqlpw=asdf
 # this is really not important! just pick one 
 fdwserver=silva_server
 
-#PostgreSQL target server connection options
-pghost=antares
-pgport=5433
-pguser=mschneid
-pgdb=megdb_r8
-pgpw=
-
 # names of the silva schemas/databases
 ssuschema=silva_r113_ssu_web
 lsuschema=silva_r113_lsu_web
-
